--- a/src/webapp/WEB-INF/pages/edit.html
+++ b/src/webapp/WEB-INF/pages/edit.html
@@ -3,37 +3,50 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Create New User</title>
+  <title>editUser</title>
 </head>
 <body>
 <div align="center">
   <h2>Edit User</h2>
-  <form th:method="patch" th:action="@{/users/{id}(id=${user.getId()})}" th:object="${user}">
+  <form th:method="POST" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
     <table border="0" cellpadding="5">
       <tr>
         <td>Name:</td>
-        <td><input type="text" th:field="*{name}" id="name"></td>
+        <td><input type="text" th:field="*{name}" id="username"></td>
       </tr>
       <tr>
-        <td>SurName:</td>
-        <td><input type="text" th:field="*{surname}" id="surname"></td>
+        <td>SurNAME:</td>
+        <td><input type="text" th:field="*{surname}" id="lastName"></td>
       </tr>
       <tr>
         <td>Year:</td>
-        <td><input type="number" th:field="*{year}" id="year"></td>
+        <td><input type="number" th:field="*{year}" id="age"></td>
       </tr>
+      <tr>
+        <td>USERNAME:</td>
+        <td><input type="text" th:field="*{username}" id="email"></td>
+      </tr>
+      <tr>
+        <td>Password:</td>
+        <td><input type="text" th:field="*{password}" id="password"></td>
+      </tr>
+
+      <input th:type="checkbox" th:id="1" th:name="ADMIN" th:value="ADMIN">
+      <label th:for="ADMIN">Admin</label>
+      <input th:type="checkbox" th:id="2" th:name="USER" th:value="USER">
+      <label th:for="USER">User</label>
       <tr>
         <td colspan="8"><input type="submit" value="Edit!"></td>
       </tr>
     </table>
   </form>
 
-  <form th:method="delete" th:action="@{/users/{id}(id=${user.getId()})}" id=delete>
+  <form th:method="delete" th:action="@{/admin/{id}(id=${user.getId()})}" id=delete>
     <input type="submit" value="Delete">
   </form>
   <br>
   <br>
-  <form th:method="get" th:action="@{/users}">
+  <form th:method="get" th:action="@{/admin}">
     <input type="submit" value="return">
   </form>
 </div>
